--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 project(Adventure)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 set(SOURCE_FILES
         src/PlatformInterface.cpp
@@ -13,5 +13,8 @@ set(SOURCE_FILES
     )
 
 add_executable(Adventure ${SOURCE_FILES})
+
+set_property(TARGET Adventure PROPERTY CXX_STANDARD 14)
+set_property(TARGET Adventure PROPERTY CXX_STANDARD_REQUIRED ON)
 
 target_link_libraries(Adventure sfml-graphics sfml-window sfml-system)
